some adjustments to emoji and other html files

--- a/emoji-library.html
+++ b/emoji-library.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <h1>Emoji Library!</h1>
+    <h1>Hello Emoji Library!</h1>
     <div class="row" id="emoji-container">
 
     </div>
