--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
       <option value="volvo">Volvo</option>
       <option value="saab">Saab</option>
       <option value="audi">Audi</option>
+      <option value="audi">Audi</option>
+      <option value="audi">Audi</option>
     </select>
 
     <textarea rows="4" cols="50"></textarea>
