small fixes to random dog to allow up to 20 images and reduce image max size

--- a/random_dog.html
+++ b/random_dog.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <style>
     .image {
-      max-width: 100%;
+      max-width: 500px;
     }
   </style>
 </head>
@@ -21,7 +21,7 @@
   <script>
     const imageSelect = document.getElementById('imageCount');
 
-    for (let i = 1; i <= 10; i++) {
+    for (let i = 1; i <= 20; i++) {
       imageSelect.innerHTML += `<option value=${i}>${i}</option>`
     }
 
